tests/NormalTests/paczka1/fuzzy1/73231572.err
Error in line 3: 2wbAqYyndT A188 69,4
Error in line 11: 85k8 A339 -3,1
Error in line 14: 2NXs0JUEH A188 23,38
Error in line 13: 2NXs0JUEH A522 46,4
Error in line 15: 2NXs0JUEH S275 5,1
Error in line 25: dtD S275 40,2
Error in line 8: 85k8 A339 73,3
